--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
         .header {
             display: flex;
             align-items: center;
+            justify-content: space-between;
             padding: 20px;
             background-color: #3F3F3F; /* Un poco más claro que el fondo */
             box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2);
@@ -25,6 +26,17 @@
             text-transform: uppercase;
             letter-spacing: 2px;
         }
+        .header a {
+            text-decoration: none;
+            background-color: #ffcc00; /* Color solicitado */
+            color: white;
+            padding: 10px 20px;
+            border-radius: 5px;
+            font-size: 1em;
+            font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+            text-transform: uppercase;
+            letter-spacing: 1px;
+        }
         .horizontal-line {
             width: 100%;
             height: 2px;
@@ -35,14 +47,34 @@
             display: flex;
             justify-content: center;
             padding: 20px;
+            gap: 20px; /* Espacio entre las imágenes */
+            flex-wrap: wrap;
+        }
+        .image-container .image-item {
+            text-align: center;
+            max-width: 100%;
+            flex: 1 1 calc(33.333% - 40px); /* Ajusta el tamaño para 3 columnas con gap */
+            box-sizing: border-box;
         }
         .image-container img {
-            max-width: 100%;
+            width: 100%;
             height: auto;
+            border-radius: 10px; /* Bordes redondeados para un mejor estilo */
+        }
+        .image-container p {
+            color: white;
+            margin: 10px 0 5px;
+        }
+        .image-container a {
+            color: #ffcc00;
+            text-decoration: none;
         }
         @media (min-width: 600px) {
             .header h1 {
                 font-size: 2.5em;
+            }
+            .image-container .image-item {
+                flex: 1 1 calc(50% - 40px); /* Ajusta el tamaño para 2 columnas con gap */
             }
         }
         @media (min-width: 768px) {
@@ -52,16 +84,48 @@
             .header h1 {
                 font-size: 3em;
             }
+            .header a {
+                font-size: 1.2em;
+                padding: 12px 24px;
+            }
+            .image-container .image-item {
+                flex: 1 1 calc(33.333% - 40px); /* Ajusta el tamaño para 3 columnas con gap */
+            }
         }
     </style>
+    <script>
+        function clearContent() {
+            const container = document.querySelector('.image-container');
+            container.innerHTML = `
+                <div class="image-item">
+                    <img src="https://m.media-amazon.com/images/I/818P-KLczaL._AC_SX679_.jpg" alt="Imagen 1">
+                    <p>PLAYMOBIL Novelmore 70222 Fortaleza con Lanzapiedras y Cañón de Agua, 94.67€</p>
+                    <a href="https://www.amazon.es/PLAYMOBIL-Castillo-de-Novelmore-70222/dp/B07VXR9VH7/ref=sr_1_5?dib=eyJ2IjoiMSJ9.NO7C5waVdJESTEgHz7elZGK49WECiJJESRPLDLNA4q1_PwNmG3CofY1qk0PgYAbcWy6Ujdl8SOEBwzlFyySXA5i0r0g9TjgaM5f9H1lf-gnAuG0CJQSCD3o0P60zMYzT2Hf69paelfo1QLeHTDfXIbN9SsaGN1Kch9i81CrJXvd5FmRLYopmivUKCR9cCGalfHfWYrlURdINMsm1szOPLA0IzwovSppfK4-Pp_-T3VFY7aWN8uvWqvHXxBi-V_VYbjWjhQXpkMRZ4-8QUSHsRf8AYxYOYT4nzqZ-Geku27E.utZtx45gpgzuI6rRy4J2F4e4tNW1HC4Eo8g2OK82WUM&dib_tag=se&keywords=castillo%2Bplaymobil%2Bmedieval&qid=1718389434&sr=8-5&ufe=app_do%3Aamzn1.fos.5e544547-1f8e-4072-8c08-ed563e39fc7d&th=1" target="_blank">Ver en Amazon</a>
+                </div>
+                <div class="image-item">
+                    <img src="https://m.media-amazon.com/images/I/611ba1oMryL._AC_UF1000,1000_QL80_.jpg" alt="Imagen 2">
+                    <p>PLAYMOBIL Novelmore 70221 Fortaleza de los Bandidos de Burnham, 179€</p>
+                    <a href="https://www.amazon.es/Playmobil-Knights-Feuerfels-70221-construcci%C3%B3n/dp/B07P6FL9B1/ref=sr_1_11?dib=eyJ2IjoiMSJ9.NO7C5waVdJESTEgHz7elZGK49WECiJJESRPLDLNA4q1_PwNmG3CofY1qk0PgYAbcWy6Ujdl8SOEBwzlFyySXA5i0r0g9TjgaM5f9H1lf-gnAuG0CJQSCD3o0P60zMYzT2Hf69paelfo1QLeHTDfXIbN9SsaGN1Kch9i81CrJXvd5FmRLYopmivUKCR9cCGalfHfWYrlURdINMsm1szOPLA0IzwovSppfK4-Pp_-T3VFY7aWN8uvWqvHXxBi-V_VYbjWjhQXpkMRZ4-8QUSHsRf8AYxYOYT4nzqZ-Geku27E.utZtx45gpgzuI6rRy4J2F4e4tNW1HC4Eo8g2OK82WUM&dib_tag=se&keywords=castillo%2Bplaymobil%2Bmedieval&qid=1718389638&sr=8-11&ufe=app_do%3Aamzn1.fos.5e544547-1f8e-4072-8c08-ed563e39fc7d&th=1" target="_blank">Ver en Amazon</a>
+                </div>
+                <div class="image-item">
+                    <img src="https://m.media-amazon.com/images/I/813f5mpZSVL._AC_UF894,1000_QL80_.jpg" alt="Imagen 3">
+                    <p>PLAYMOBIL 70745 Novelmore Violet Vale, Torre mágica, 85.41€</p>
+                    <a href="https://www.amazon.es/PLAYMOBIL-Novelmore-70745-Violet-Vale/dp/B08Q7Z8R3R/ref=sr_1_21?dib=eyJ2IjoiMSJ9.NO7C5waVdJESTEgHz7elZGK49WECiJJESRPLDLNA4q1_PwNmG3CofY1qk0PgYAbcWy6Ujdl8SOEBwzlFyySXA5i0r0g9TjgaM5f9H1lf-gnAuG0CJQSCD3o0P60zMYzT2Hf69paelfo1QLeHTDfXIbN9SsaGN1Kch9i81CrJXvd5FmRLYopmivUKCR9cCGalfHfWYrlURdINMsm1szOPLA0IzwovSppfK4-Pp_-T3VFY7aWN8uvWqvHXxBi-V_VYbjWjhQXpkMRZ4-8QUSHsRf8AYxYOYT4nzqZ-Geku27E.utZtx45gpgzuI6rRy4J2F4e4tNW1HC4Eo8g2OK82WUM&dib_tag=se&keywords=castillo%2Bplaymobil%2Bmedieval&qid=1718389638&sr=8-21&ufe=app_do%3Aamzn1.fos.5e544547-1f8e-4072-8c08-ed563e39fc7d&th=1" target="_blank">Ver en Amazon</a>
+                </div>
+            `;
+        }
+    </script>
 </head>
 <body>
     <div class="horizontal-line"></div>
     <div class="header">
         <h1>Playmobil</h1>
+        <a href="#" onclick="clearContent()">Medieval</a>
     </div>
     <div class="image-container">
-        <img src="https://media.playmobil.com/i/playmobil/70955_product_detail?locale=es-ES,es,en,*&fmt=auto&strip=true&qlt=100&unsharp=0,1,0.9,1&fmt.jpeg.interlaced=true" alt="Playmobil Image">
+        <div class="image-item">
+            <img src="https://media.playmobil.com/i/playmobil/70955_product_detail?locale=es-ES,es,en,*&fmt=auto&strip=true&qlt=100&unsharp=0,1,0.9,1&fmt.jpeg.interlaced=true" alt="Playmobil Image">
+        </div>
     </div>
 </body>
 </html>
