--- a/index.html
+++ b/index.html
@@ -99,17 +99,17 @@
             container.innerHTML = `
                 <div class="image-item">
                     <img src="https://m.media-amazon.com/images/I/818P-KLczaL._AC_SX679_.jpg" alt="Imagen 1">
-                    <p>PLAYMOBIL Novelmore 70222 Fortaleza con Lanzapiedras y Cañón de Agua, 94.67€</p>
+                    <p>PLAYMOBIL Novelmore 70222 Fortaleza con Lanzapiedras y Cañón de Agua<br> 94,67€</p>
                     <a href="https://www.amazon.es/PLAYMOBIL-Castillo-de-Novelmore-70222/dp/B07VXR9VH7/ref=sr_1_5?dib=eyJ2IjoiMSJ9.NO7C5waVdJESTEgHz7elZGK49WECiJJESRPLDLNA4q1_PwNmG3CofY1qk0PgYAbcWy6Ujdl8SOEBwzlFyySXA5i0r0g9TjgaM5f9H1lf-gnAuG0CJQSCD3o0P60zMYzT2Hf69paelfo1QLeHTDfXIbN9SsaGN1Kch9i81CrJXvd5FmRLYopmivUKCR9cCGalfHfWYrlURdINMsm1szOPLA0IzwovSppfK4-Pp_-T3VFY7aWN8uvWqvHXxBi-V_VYbjWjhQXpkMRZ4-8QUSHsRf8AYxYOYT4nzqZ-Geku27E.utZtx45gpgzuI6rRy4J2F4e4tNW1HC4Eo8g2OK82WUM&dib_tag=se&keywords=castillo%2Bplaymobil%2Bmedieval&qid=1718389434&sr=8-5&ufe=app_do%3Aamzn1.fos.5e544547-1f8e-4072-8c08-ed563e39fc7d&th=1" target="_blank">Ver en Amazon</a>
                 </div>
                 <div class="image-item">
                     <img src="https://m.media-amazon.com/images/I/611ba1oMryL._AC_UF1000,1000_QL80_.jpg" alt="Imagen 2">
-                    <p>PLAYMOBIL Novelmore 70221 Fortaleza de los Bandidos de Burnham, 179€</p>
+                    <p>PLAYMOBIL Novelmore 70221 Fortaleza de los Bandidos de Burnham<br> 179€</p>
                     <a href="https://www.amazon.es/Playmobil-Knights-Feuerfels-70221-construcci%C3%B3n/dp/B07P6FL9B1/ref=sr_1_11?dib=eyJ2IjoiMSJ9.NO7C5waVdJESTEgHz7elZGK49WECiJJESRPLDLNA4q1_PwNmG3CofY1qk0PgYAbcWy6Ujdl8SOEBwzlFyySXA5i0r0g9TjgaM5f9H1lf-gnAuG0CJQSCD3o0P60zMYzT2Hf69paelfo1QLeHTDfXIbN9SsaGN1Kch9i81CrJXvd5FmRLYopmivUKCR9cCGalfHfWYrlURdINMsm1szOPLA0IzwovSppfK4-Pp_-T3VFY7aWN8uvWqvHXxBi-V_VYbjWjhQXpkMRZ4-8QUSHsRf8AYxYOYT4nzqZ-Geku27E.utZtx45gpgzuI6rRy4J2F4e4tNW1HC4Eo8g2OK82WUM&dib_tag=se&keywords=castillo%2Bplaymobil%2Bmedieval&qid=1718389638&sr=8-11&ufe=app_do%3Aamzn1.fos.5e544547-1f8e-4072-8c08-ed563e39fc7d&th=1" target="_blank">Ver en Amazon</a>
                 </div>
                 <div class="image-item">
                     <img src="https://m.media-amazon.com/images/I/813f5mpZSVL._AC_UF894,1000_QL80_.jpg" alt="Imagen 3">
-                    <p>PLAYMOBIL 70745 Novelmore Violet Vale, Torre mágica, 85.41€</p>
+                    <p>PLAYMOBIL 70745 Novelmore Violet Vale, Torre mágica<br> 85,41€</p>
                     <a href="https://www.amazon.es/PLAYMOBIL-Novelmore-70745-Violet-Vale/dp/B08Q7Z8R3R/ref=sr_1_21?dib=eyJ2IjoiMSJ9.NO7C5waVdJESTEgHz7elZGK49WECiJJESRPLDLNA4q1_PwNmG3CofY1qk0PgYAbcWy6Ujdl8SOEBwzlFyySXA5i0r0g9TjgaM5f9H1lf-gnAuG0CJQSCD3o0P60zMYzT2Hf69paelfo1QLeHTDfXIbN9SsaGN1Kch9i81CrJXvd5FmRLYopmivUKCR9cCGalfHfWYrlURdINMsm1szOPLA0IzwovSppfK4-Pp_-T3VFY7aWN8uvWqvHXxBi-V_VYbjWjhQXpkMRZ4-8QUSHsRf8AYxYOYT4nzqZ-Geku27E.utZtx45gpgzuI6rRy4J2F4e4tNW1HC4Eo8g2OK82WUM&dib_tag=se&keywords=castillo%2Bplaymobil%2Bmedieval&qid=1718389638&sr=8-21&ufe=app_do%3Aamzn1.fos.5e544547-1f8e-4072-8c08-ed563e39fc7d&th=1" target="_blank">Ver en Amazon</a>
                 </div>
             `;
