--- a/index.html
+++ b/index.html
@@ -132,8 +132,8 @@
     <header class="header">
         <h1>Playmobil</h1>
         <select onchange="clearContent(this.value)">
-            <option value="inicio">Inicio</option>
-            <option value="medieval">Medieval</option>
+            <option value="inicio">Inicio ≡</option>
+            <option value="medieval">Medieval ≡</option>
         </select>
     </header>
     <div class="horizontal-line"></div>
