--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Playmobil</title>
     <style>
+        /* Estilos generales */
         body {
             background-color: #2F2F2F;
             margin: 0;
@@ -15,7 +16,7 @@
             align-items: center;
             justify-content: space-between;
             padding: 20px;
-            background-color: #3F3F3F;
+            background-color: #3F3F2F;
             box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2);
         }
         .header h1 {
@@ -55,7 +56,7 @@
         .image-container .image-item {
             text-align: center;
             max-width: 100%;
-            flex: 1 1 calc(100% - 40px); /* default to full width */
+            flex: 1 1 calc(100% - 40px); /* Ocupa todo el ancho por defecto */
             box-sizing: border-box;
         }
         .image-container img {
@@ -71,14 +72,18 @@
             color: #ffcc00;
             text-decoration: none;
         }
+
+        /* Estilos para pantallas más grandes */
         @media (min-width: 600px) {
             .header h1 {
                 font-size: 2.5em;
             }
             .image-container .image-item {
-                flex: 1 1 calc(50% - 40px); /* two columns on larger screens */
+                flex: 1 1 calc(50% - 40px); /* Dos columnas en pantallas más grandes */
             }
         }
+
+        /* Estilos para pantallas aún más grandes */
         @media (min-width: 768px) {
             .header {
                 padding: 30px;
@@ -91,7 +96,7 @@
                 padding: 12px 24px;
             }
             .image-container .image-item {
-                flex: 1 1 calc(33.333% - 40px); /* three columns on even larger screens */
+                flex: 1 1 calc(33.333% - 40px); /* Tres columnas en pantallas aún más grandes */
             }
         }
     </style>
@@ -138,9 +143,9 @@
     </header>
     <div class="horizontal-line"></div>
     <div class="image-container">
-        <div class="image-item">
-            <img src="https://media.playmobil.com/i/playmobil/70955_product_detail?locale=es-ES,es,en,*&fmt=auto&strip=true&qlt=100&unsharp=0,1,0.9,1&fmt.jpeg.interlaced=true" alt="Imagen de Inicio">
-        </div>
+      <div class="image-item">
+          <img src="https://media.playmobil.com/i/playmobil/70955_product_detail?locale=es-ES,es,en,*&fmt=auto&strip=true&qlt=100&unsharp=0,1,0.9,1&fmt.jpeg.interlaced=true" alt="Imagen de Inicio">
+      </div>
     </div>
 </body>
 </html>
