--- a/index.html
+++ b/index.html
@@ -161,6 +161,24 @@
                         <a href="https://www.amazon.es/PLAYMOBIL-Autob%C3%BAs-Escolar-71094-Multicolor/dp/B09P4CTNJH/ref=sr_1_7?crid=N4GXA706U1MM&dib=eyJ2IjoiMSJ9.5FS3Jfn3ZYY9jdP-4DsZt0aC9-NLQurofTsXVm_zQ3bXWhmeSpLFqWUcrzC0n6krryIwq3ke-DZg9YujTaV1osGU2CAZ_Vv9jyI33q6c76qQlhkJ_q3Q2t7NOk2bltrGSfe6jtrQm3OIXp986ieNVE7Y9iGxCHbVHm6N0ktAXmI6-uzgmpLkSf6_2romCtnzrRs3FBvBySVXKJkfMWvMEe-FbvDRrBotqdvI9YkZM2vq_B6qPIHsEAlER_Ogf-uAigC5eDgr2scHoIkY7snr5XQJZBpPiWcstCs8cIFAZc4.qQTkUmGqW65LS1XGE1m7sHYkw2GHWdE44aW500L0pK8&dib_tag=se&keywords=playmobil+city+life&qid=1719073602&s=toys&sprefix=Playmobil+%2Ctoys%2C708&sr=1-7" target="_blank">Ver en Amazon</a>
                     </div>
                 `;
+            } else if (category === 'fantasia') {
+                container.innerHTML = `
+                    <div class="image-item">
+                        <img src="https://m.media-amazon.com/images/I/71bWzpf3M1L._AC_SX679_.jpg" alt="PLAYMOBIL Colegio 6865">
+                        <p>PLAYMOBIL Adventures of Ayuma 71032 Lago Moon Fairy, Incluye Hadas de Juguete con alas de Hadas móviles<br> <strong>18,99€</strong></p>
+                        <a href="https://www.amazon.es/PLAYMOBIL-Adventures-71032-Incluye-Juguetes/dp/B09P49SC4Y/ref=sr_1_13?dib=eyJ2IjoiMSJ9.gGInzdaDP7u_SIh5NeZlU5K27XSVC4RWDCn6lQ03MSlRpfEfzIgmm_B7VVbvMuJUq_Ttig0HbQOcHU4fjkAif999P1peOiThUrFEAjGig2nfZK9save7sDEAiNKBF2hKGbHxib4pGHeNFOQ1Bb4nyFD60y_9PTfjzbSszJsCpmc3jiJIE5GxGQS1lIVHoRGrydqdFoaD1emEwy4tzaot9VNtyGjH5KnVo1wG4kGn1JyGegMeTfsWpw7P-HkX7xiO2pIsw6NrNkeVC1-w3hDeeviZBg_HK4WexSkXjLDfjqI.IaNpbrq3ZLUiZNRFuDhtFlalxNZCRTw97zUoHt0W03E&dib_tag=se&keywords=playmobil+fantasia&qid=1719343573&sr=8-13" target="_blank">Ver en Amazon</a>
+                    </div>
+                    <div class="image-item">
+                        <img src="https://m.media-amazon.com/images/I/81B5huaSFrL._AC_SX679_.jpg">
+                        <p>PLAYMOBIL Adventures of Ayuma 71235 Crystal y Moon Fairy con Animales del Alma<br> <strong>12,99</strong></p>
+                        <a href="https://www.amazon.es/PLAYMOBIL-Adventures-Crystal-Animales-Juguete/dp/B0BKQLZ4T8/ref=sr_1_5?dib=eyJ2IjoiMSJ9.gGInzdaDP7u_SIh5NeZlU5K27XSVC4RWDCn6lQ03MSlRpfEfzIgmm_B7VVbvMuJUq_Ttig0HbQOcHU4fjkAif999P1peOiThUrFEAjGig2nfZK9save7sDEAiNKBF2hKGbHxib4pGHeNFOQ1Bb4nyFD60y_9PTfjzbSszJsCpmc3jiJIE5GxGQS1lIVHoRGrydqdFoaD1emEwy4tzaot9VNtyGjH5KnVo1wG4kGn1JyGegMeTfsWpw7P-HkX7xiO2pIsw6NrNkeVC1-w3hDeeviZBg_HK4WexSkXjLDfjqI.IaNpbrq3ZLUiZNRFuDhtFlalxNZCRTw97zUoHt0W03E&dib_tag=se&keywords=playmobil+fantasia&qid=1719343573&sr=8-5" target="_blank">Ver en Amazon</a>
+                    </div>
+                    <div class="image-item">
+                        <img src="https://m.media-amazon.com/images/I/71NW3plPn-L._AC_SX679_.jpg">
+                        <p>PLAYMOBIL Princess Magic 71499 Sirena Cuidado de Animales, Cuidado tierno para Animales Marinos<br> <strong>39,99€</strong></p>
+                        <a href="https://www.amazon.es/PLAYMOBIL-Princess-71499-Animales-imaginativos/dp/B0CK2DD6R6/ref=sr_1_5?__mk_es_ES=%C3%85M%C3%85%C5%BD%C3%95%C3%91&crid=17CMWR5Z6WV2U&dib=eyJ2IjoiMSJ9.I3y5fD6Kke6BVkTjqsxgHWkfwIEIg0mVo7duEekmCIofSATCX1YDAfFze-l-6OhIYKQmBXi_Wsw3WKSnjsRqzj97PF35uCFvOlytd8iSp4uMPODDGXfXkYAmdJCBEInB9_M4bjJWekTDfGpVzrhy175icwdSCCV8Atpegjj83jaAWz5hP3gYj7pNvyWNHO5qjFSwXCkhKFX8MfDxHqOi3Uwcvp2BZ80vKRMAleK2g6YgR8dh5G_tPj7hlcJYudwnxxlQMC2PsENbuwBt9giUjc_NirFCVZU4bWqpIaa3yh8.V1GHfTJlD3uF9aGVEDQVRCvefMCp1fAiFtnbewCfVDg&dib_tag=se&keywords=playmobil+sirenas&qid=1719343774&sprefix=playmobil+sirenas%2Caps%2C105&sr=8-5" target="_blank">Ver en Amazon</a>
+                    </div>
+                `;
             } else {
                 container.innerHTML = '';
             }
@@ -175,6 +193,7 @@
             <option value="medieval">Medieval ≡</option>
             <option value="ciudad">Ciudad ≡</option>
             <option value="transportes">Transportes ≡</option>
+            <option value="fantasia">Fantasía ≡</option>
         </select>
     </header>
     <div class="horizontal-line"></div>
