--- a/index.html
+++ b/index.html
@@ -179,6 +179,42 @@
                         <a href="https://www.amazon.es/PLAYMOBIL-Princess-71499-Animales-imaginativos/dp/B0CK2DD6R6/ref=sr_1_5?__mk_es_ES=%C3%85M%C3%85%C5%BD%C3%95%C3%91&crid=17CMWR5Z6WV2U&dib=eyJ2IjoiMSJ9.I3y5fD6Kke6BVkTjqsxgHWkfwIEIg0mVo7duEekmCIofSATCX1YDAfFze-l-6OhIYKQmBXi_Wsw3WKSnjsRqzj97PF35uCFvOlytd8iSp4uMPODDGXfXkYAmdJCBEInB9_M4bjJWekTDfGpVzrhy175icwdSCCV8Atpegjj83jaAWz5hP3gYj7pNvyWNHO5qjFSwXCkhKFX8MfDxHqOi3Uwcvp2BZ80vKRMAleK2g6YgR8dh5G_tPj7hlcJYudwnxxlQMC2PsENbuwBt9giUjc_NirFCVZU4bWqpIaa3yh8.V1GHfTJlD3uF9aGVEDQVRCvefMCp1fAiFtnbewCfVDg&dib_tag=se&keywords=playmobil+sirenas&qid=1719343774&sprefix=playmobil+sirenas%2Caps%2C105&sr=8-5" target="_blank">Ver en Amazon</a>
                     </div>
                 `;
+            } else if (category === 'dinosaurios') {
+                container.innerHTML = `
+                    <div class="image-item">
+                        <img src="https://m.media-amazon.com/images/I/813WhK7IunL._AC_SL1500_.jpg">
+                        <p>PLAYMOBIL Dino Rise 71261 T Rex, Dinosaurio Tiene una Armadura Desmontable con Dispositivo Lanza Piedras<br> <strong>49,99€</strong></p>
+                        <a href="https://www.amazon.es/PLAYMOBIL-71261-Dinosaurio-Desmontable-Dispositivo/dp/B0BKQTBTSK/ref=sr_1_6_mod_primary_new?__mk_es_ES=%C3%85M%C3%85%C5%BD%C3%95%C3%91&crid=4K9DMZI2903I&dib=eyJ2IjoiMSJ9.kUSXeIrHXN81QLcxoczIpmgMXFnwBtM4BwvtXU260Tw-Q3uNJ_lHQv0ZJU_a4LSoecQLMhJe6ZMJt8q537W1iXLSZv0_G09LcqjSu0e--8_WL1QiEnKoO21Qmv34hq6SiRE-glUX-HTefNCxvz6nsLMpIwxs8dkQvl0fLGH5A2bGFmtpBUCklfQdR3urGA06xaaV0Od7K3rrItLARyzUS77Ks0knV-EVZW_gVwwCDPIchj_5NPYrCPrpGkKdCHXDHtcjKOBsuF8zV7Oe-xAEOSPp6bQ99OItmh7uAlZNQLg.oUBbif3Do0KDOGPluskuXCY-zCZT3OqWIdOC4Q7fRjU&dib_tag=se&keywords=playmobil+t-rex&qid=1719391622&sbo=RZvfv%2F%2FHxDF%2BO5021pAnSA%3D%3D&sprefix=playmobil+t-re%2Caps%2C203&sr=8-6" target="_blank">Ver en Amazon</a>
+                    </div>
+                    <div class="image-item">
+                        <img src="https://img.mrvcdn.com/g/fb/kf/Ec521cee626c347b59e0c1cf570d9898f9.jpg_2200x2200q75.avif">
+                        <p>PLAYMOBIL Dino Rise 71263 Dimorphodon, pterosaurio con Armadura Desmontable con Asiento de pie<br> <strong>24,99</strong></p>
+                        <a href="https://www.amazon.es/PLAYMOBIL-71263-Dimorphodon-pterosaurio-Desmontable/dp/B0BKQSKQLY/ref=sr_1_5?__mk_es_ES=%C3%85M%C3%85%C5%BD%C3%95%C3%91&crid=1R3KH506OAYIP&dib=eyJ2IjoiMSJ9.GbvwRmcvNCK47KyYDrqALBUchHlQai9FHxNZMoq7Lwt6Zi0t6vBFaBt22ZcXtIz2THNO4aQKmWtMj369oQlA043FtDOGGjOF6lxJuSaKfDnZDJW17FviXZ4BCq_Zck4PGX3Z28WIYKqAVZSwWYG1Zg2iKjFhQanJsefp2mkYEvNpFVB0rXlJfg96AzegbGRFPo86iAu3tTtItYLJnTUs6ZZSrAAkun3g-fXPiDFNyBZ0L3FVsj8yECnhd-zlfjWHjtR7O_p0b1dtAm6V8sNY2TlyaLngqTiU1tVv0XUK21s.LiD9_SJrKEnIeUSOB57FvNv8xHbHZEDuaF882MsRvy0&dib_tag=se&keywords=playmobil+dinosaurios&qid=1719390035&sprefix=playmobil+dinosaurios%2Caps%2C159&sr=8-5" target="_blank">Ver en Amazon</a>
+                    </div>
+                    <div class="image-item">
+                        <img src="https://m.media-amazon.com/images/I/81xiWNCXcXL._AC_SX679_.jpg">
+                        <p>PLAYMOBIL Dino Rise 71262 Triceratops, La Armadura del Dinosaurio es acoplable, cañón móvil con garfio<br> <strong>34,99€</strong></p>
+                        <a href="https://www.amazon.es/PLAYMOBIL-71262-Triceratops-Dinosaurio-acoplable/dp/B0BKQT35MH/ref=sr_1_7?__mk_es_ES=%C3%85M%C3%85%C5%BD%C3%95%C3%91&crid=1R3KH506OAYIP&dib=eyJ2IjoiMSJ9.GbvwRmcvNCK47KyYDrqALBUchHlQai9FHxNZMoq7Lwt6Zi0t6vBFaBt22ZcXtIz2THNO4aQKmWtMj369oQlA043FtDOGGjOF6lxJuSaKfDnZDJW17FviXZ4BCq_Zck4PGX3Z28WIYKqAVZSwWYG1Zg2iKjFhQanJsefp2mkYEvNpFVB0rXlJfg96AzegbGRFPo86iAu3tTtItYLJnTUs6ZZSrAAkun3g-fXPiDFNyBZ0L3FVsj8yECnhd-zlfjWHjtR7O_p0b1dtAm6V8sNY2TlyaLngqTiU1tVv0XUK21s.LiD9_SJrKEnIeUSOB57FvNv8xHbHZEDuaF882MsRvy0&dib_tag=se&keywords=playmobil+dinosaurios&qid=1719390035&sprefix=playmobil+dinosaurios%2Caps%2C159&sr=8-7" target="_blank">Ver en Amazon</a>
+                    </div>
+                `;
+            } else if (category === 'playmobil123') {
+                container.innerHTML = `
+                    <div class="image-item">
+                        <img src="https://m.media-amazon.com/images/I/612iSdfREwL._AC_SX425_.jpg">
+                        <p>PLAYMOBIL 1,2,3 71158 Granja con Simpáticos Animales de Granja y Figuras, Juguetes Educativos y de Motricidad para Niños Pequeños<br> <strong>21,99€</strong></p>
+                        <a href="https://www.amazon.es/PLAYMOBIL-simp%C3%A1ticos-animales-Educativos-Motricidad/dp/B09WF1MT6S/ref=sr_1_6?__mk_es_ES=%C3%85M%C3%85%C5%BD%C3%95%C3%91&crid=17MHVK4NA8T51&dib=eyJ2IjoiMSJ9.eWI_uKeVLjjPobv57XGzOfR3MjsLFeNz5ZF-OALO4PfL6m5hwJxOCxr6cSS24Dq7fe-21Et-_cgz6m0atsOEndHaZkgvraKk3EKrJ2o64h1-PBXK_qs3K-ItVr39HGd8qqnuj7uXLY6kbvn8uPsn_w_qkBoRLYSD5pVuA73XEMqNZDohZa9o4pcQ4XK4Z1eq6p_uV3Byi209mORPL6XOnTU0kLjZAFUHmM7pyazfsHBlDDAcnQ1BtcSABKnoF6FplZOY-WgMZm2sTF-_9jbpuayHXMawi-Mdbgxsoa7Fwv8.14f5H5NzZYZfPB9uU_uc40-uMdoclfQPr5WFFAg8epo&dib_tag=se&keywords=playmobil+123&qid=1719392181&sprefix=playmobil+12%2Caps%2C219&sr=8-6" target="_blank">Ver en Amazon</a>
+                    </div>
+                    <div class="image-item">
+                        <img src="https://m.media-amazon.com/images/I/81rqdbSkY8L._AC_SX425_.jpg">
+                        <p>PLAYMOBIL 1,2,3 70399 Guardería Maletín<br> <strong>44,99</strong></p>
+                        <a href="https://www.amazon.es/PLAYMOBIL-1-2-3-70399-PLAYMOBIL-Juguete/dp/B085FLFHKP/ref=sr_1_12_mod_primary_new?__mk_es_ES=%C3%85M%C3%85%C5%BD%C3%95%C3%91&crid=LEOUWYEERDC9&dib=eyJ2IjoiMSJ9.eWI_uKeVLjjPobv57XGzOfR3MjsLFeNz5ZF-OALO4PfL6m5hwJxOCxr6cSS24Dq7erhpP3L5XVFeDyonNFcZ9Ujh31jqNKMQVXyuQofwmKNC5ru0_EzrmeTgZld4eLWEbVF8OuyyBxIyRmevAbGXZwk2cydx490xTCJiLUZTy2JyVBpdxtV2NIDepmghP4bCk5xJQIrMD1v8Kw0hWLShy_0O7KeXOx9KuIg47tvhFWRnMZx2lRx-58TShaIVy8qUl71lK9n83xU-UswY6evdDayHXMawi-Mdbgxsoa7Fwv8.O0fuasZe77sPQwxN12O_fl984Q8xcwazkglkYDFlhSo&dib_tag=se&keywords=playmobil+123&qid=1719392366&sbo=RZvfv%2F%2FHxDF%2BO5021pAnSA%3D%3D&sprefix=playmobil+123%2Caps%2C152&sr=8-12" target="_blank">Ver en Amazon</a>
+                    </div>
+                    <div class="image-item">
+                        <img src="https://m.media-amazon.com/images/I/81+MjA6fwXL._AC_SX679_.jpg">
+                        <p>PLAYMOBIL 6962 1,2,3 Granja Maletín<br> <strong>39,99€</strong></p>
+                        <a href="https://www.amazon.es/PLAYMOBIL-6962-Granja-Malet%C3%ADn-Surtido/dp/B0168YK9JS/ref=sr_1_21?__mk_es_ES=%C3%85M%C3%85%C5%BD%C3%95%C3%91&dib=eyJ2IjoiMSJ9.eWI_uKeVLjjPobv57XGzOfR3MjsLFeNz5ZF-OALO4PfL6m5hwJxOCxr6cSS24Dq7erhpP3L5XVFeDyonNFcZ9Ujh31jqNKMQVXyuQofwmKNC5ru0_EzrmeTgZld4eLWEbVF8OuyyBxIyRmevAbGXZwk2cydx490xTCJiLUZTy2JyVBpdxtV2NIDepmghP4bCk5xJQIrMD1v8Kw0hWLShy_0O7KeXOx9KuIg47tvhFWRnMZx2lRx-58TShaIVy8qUl71lK9n83xU-UswY6evdDayHXMawi-Mdbgxsoa7Fwv8.O0fuasZe77sPQwxN12O_fl984Q8xcwazkglkYDFlhSo&dib_tag=se&keywords=playmobil%2B123&qid=1719392410&sr=8-21&th=1" target="_blank">Ver en Amazon</a>
+                    </div>
+                `;
             } else {
                 container.innerHTML = '';
             }
@@ -194,6 +230,8 @@
             <option value="ciudad">Ciudad ≡</option>
             <option value="transportes">Transportes ≡</option>
             <option value="fantasia">Fantasía ≡</option>
+            <option value="dinosaurios">Dinosaurios ≡</option>
+            <option value="playmobil123">Playmobil 123 ≡</option>
         </select>
     </header>
     <div class="horizontal-line"></div>
